[package]
name = "mdbook-shortcodes"
version = "0.1.0"
edition = "2018"
description = "A preprocessor for mdBook, which adds helpful shortcodes."
repository = "https://github.com/tsoutsman/mdbook-shortcodes"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
