[package]
name = "mdbook-shortcodes"
version = "0.1.0"
edition = "2018"
description = "A preprocessor for mdBook, which adds helpful shortcodes."
repository = "https://github.com/tsoutsman/mdbook-shortcodes"
license = "MIT OR Apache-2.0"

[dependencies]
mdbook = "0.4"
clap = "2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
